<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">FFX</string>
    <string name="quit">Exit</string>
    <string name="settings">Settings</string>
    <string name="samba">LAN</string>
    <string name="ftp">FTP</string>
    <string name="sdcard">Local</string>
    <string name="read_only">Can`t read</string>
    <string name="serach">Search</string>
    <string name="delete">Delete</string>
    <string name="deleting">Delete…</string>
    <string name="file_n_exist">The file does not exist</string>
    <string name="app_n_found">The program is not found</string>
    <string name="browse">Browse</string>
    <string name="err_conn">Connection error</string>
    <string name="conng">Connection</string>
    <string name="n_act_con">There are no active network connections</string>
    <string name="tl_edit">Editing:</string>
    <string name="saved">Save</string>
    <string name="where_cau">%1$s = \"/mnt%2$s\"</string>
    <string name="media_info">Artist:\t\t%1$s\nTitle:\t\t%2$s\nAlbum:\t%3$s</string>
    <string name="name">Name</string>
    <string name="new_folder">New folder</string>
    <string name="mus_preview">Preview</string>
    <string name="txt_preview_err">Too big file, restriction 100 Kb</string>
    <string name="rename">Rename</string>
    <string name="name_or_path">The name or fragment</string>
    <string name="new_file">New file</string>
    <string name="aredelete">You really want to remove?</string>
    <string name="ok">OK</string>
    <string name="cansel">Cancel</string>
    <string name="show_place">Specify destination</string>
    <string name="err_run">There is no associated program</string>
    <string name="about">About</string>
    <string name="about_smr">About the program FastFile</string>
    <string name="about_txt">Autor: Gurkin Ivan aka paradoxfm\nCopyright © 2011 megazlonet\nEmail:
        <a href="mailto:megazlonet@gmail.com">megazlonet@gmail.com</a>
    </string>
    <string name="future">Coming soon ;)</string>
    <string name="search_rez">Search results</string>
    <string name="mn_tutor">Help</string>
    <!-- Редактор -->
    <string name="editor_save">Save</string>
    <string name="editor_edit">Edit</string>
    <!-- Настроечные параметры -->
    <string name="mainset">Main</string>
    <string name="mainset_smr">Main settings</string>
    <string name="open_ext">Open internal</string>
    <string name="open_ext_smr">To open files an internal viewer</string>
    <string name="hmdir">Home directory</string>
    <string name="hmdirsmr">The directory which will be opened at start</string>
    <string name="hidden">Hidden</string>
    <string name="hiddensmr">Show the hidden files and folders</string>
    <string name="showng">Display</string>
    <string name="showng_smr">Display settings</string>
    <string name="fulscr">Full screen</string>
    <string name="fulscrsmr">Hide status bar and clocks</string>
    <string name="anim">Show animation</string>
    <string name="animsmr">Show animation at moving under catalogs</string>
    <string name="orien">Orientation</string>
    <string name="oriensmr">Screen orientation</string>
    <string name="cite">Site</string>
    <string name="citesmr">Pass to a site of the developer</string>
    <string-array name="orient">
        <item>Not to keep</item>
        <item>Portrait</item>
        <item>Landscape</item>
    </string-array>
    <string name="setinfo">Info</string>
    <string name="t_sel_one">Touch after a vertical line for select</string>
    <string name="t_con_mnu_root">Tap title for context menu current folder</string>
    <string name="t_con_mnu">Tap icon for context menu</string>
    <string name="t_mil_sel">Long press for multiselect</string>
    <string name="t_ext_prog">Close tab or exit program when one tab</string>
    <string name="copy">Copy</string>
    <string name="cut">Cut</string>
    <string name="paste">Paste</string>
    <string name="backet">Reserve copying is finished</string>
    <string name="backup">Backup</string>
    <string name="backup_smr">Сreate a backup copy ftp connections</string>
    <string name="snd_file">Send file:</string>
    <string name="imgpew">Image preview</string>
    <string name="imgpewsmr">Show image file preview on icon files</string>
    <string name="apkpew">Apk preview</string>
    <string name="apkpewsmr">Show apk icons on icon files</string>
    <string name="mp3pew">Show cover</string>
    <string name="mp3pewsmr">Show cover arts mp3 files</string>
    <string name="showngsmr">Customise display options</string>
    <string name="rooted">Root</string>
    <string name="setviewicon">Icons</string>
    <string name="setviewother">Other</string>
    <string name="ftp_host">Domain:Host:Port</string>
    <string name="ftp_anonym">Anonimus</string>
    <string name="ftp_user">User</string>
    <string name="ftp_pwd">Password</string>
    <string name="a_opt">Attention! It is the test option which work isnt guaranteed and most likely there will be an error.</string>
    <string name="backgr_prf">Background</string>
    <string name="set_back">Set background</string>
    <string name="set_back_smr">Set as the background color fills</string>
    <string name="bckcolrsmr">Fill the background with a solid color</string>
    <string name="bckcolr">Solid color</string>
    <string name="cdes"> </string>
    <string name="mn_close">Close tab</string>

    <string name="set_widget_path">Set widget path</string>
    <string name="widget_title">Folder</string>
</resources>
