<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="always"
        android:title="@string/serach"/>

    <!-- "device" submenu -->
    <item
        android:id="@+id/devsmn"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="always|collapseActionView">
        <menu>
            <group>
                <item
                    android:id="@+id/sdcard"
                    android:icon="@drawable/prot_pda"
                    android:showAsAction="always|collapseActionView|withText"
                    android:title="@string/sdcard"/>
                <item
                    android:id="@+id/ftp"
                    android:icon="@drawable/prot_ftp"
                    android:showAsAction="always|collapseActionView|withText"
                    android:title="@string/ftp"/>
                <item
                    android:id="@+id/samba"
                    android:icon="@drawable/prot_smb"
                    android:showAsAction="always|collapseActionView|withText"
                    android:title="@string/samba"/>
            </group>
            <group>
                <item
                    android:id="@+id/closetab"
                    android:icon="@android:drawable/ic_delete"
                    android:showAsAction="always|collapseActionView|withText"
                    android:title="@string/mn_close"/>
            </group>
            <group>
                <item
                    android:id="@+id/appsett"
                    android:icon="@android:drawable/ic_menu_preferences"
                    android:title="@string/settings"/>
                <item
                    android:id="@+id/quit"
                    android:icon="@android:drawable/ic_menu_close_clear_cancel"
                    android:title="@string/quit"/>
                <item
                    android:id="@+id/tutor"
                    android:icon="@android:drawable/ic_menu_help"
                    android:title="@string/mn_tutor"/>
            </group>
        </menu>
    </item>

</menu>