<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:padding="10dip" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/ed_ftp_spin"
                android:layout_width="210dip"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/ed_ftp_del"
                android:layout_width="30dip"
                android:layout_height="30dip"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:contentDescription="@string/cdes"
                android:src="@android:drawable/ic_menu_close_clear_cancel" >
            </ImageView>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ftp_host" />

        <EditText
            android:id="@+id/ed_ftp_host"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ftp_host" />

        <CheckBox
            android:id="@+id/ed_ftp_anm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/ftp_anonym" />

        <LinearLayout
            android:id="@+id/ed_ftp_userinf"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ftp_user"
                android:textColor="@android:color/white"
                android:textSize="16dip" />

            <EditText
                android:id="@+id/ed_ftp_usr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ftp_user" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ftp_pwd"
                android:textColor="@android:color/white"
                android:textSize="16dip" />

            <EditText
                android:id="@+id/ed_ftp_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ftp_pwd"
                android:password="true" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>